[package]
authors      = ["imranmaj <49664304+imranmaj@users.noreply.github.com>"]
categories   = [
    "asynchronous",
    "network-programming",
    "web-programming",
    "web-programming::websocket",
]
description  = "A WebSocket client implementation."
edition      = "2018"
homepage     = "https://github.com/imranmaj/websockets"
keywords     = ["websocket", "websockets", "async", "tokio", "io"]
license      = "MIT"
name         = "websockets"
readme       = "README.md"
repository   = "https://github.com/imranmaj/websockets"
version      = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64           = "0.12.3"
native-tls       = "0.2.4"
once_cell        = "1.4.1"
rand             = "0.7.3"
rand_chacha      = "0.2.2"
regex            = "1.3.9"
sha-1            = "0.9.1"
thiserror        = "1.0.20"
tokio            = { version = "0.2.21", features = ["tcp", "io-util"] }
tokio-native-tls = "0.1.0"
url              = "2.1.1"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["rt-core", "macros"] }
